Fix overflow in Compendium Browser settings tab (#10377)

--- a/src/styles/packs/_index.scss
+++ b/src/styles/packs/_index.scss
@@ -11,7 +11,7 @@
         height: inherit;
 
         > section.content {
-            height: 92%;
+            height: 96%;
 
             > .tab.browser.active {
                 height: inherit;
@@ -27,6 +27,10 @@
                         grid-column-start: 2;
                     }
                 }
+            }
+
+            > .tab.settings.active {
+                height: 98%;
             }
         }
     }
